# garbage_collector_ptr

./: CMakeLists.txt
include/: gcp.h  info_unit.h  iterator.h
source/: main.cpp
test/: CMakeLists.txt  gtest.cpp
